--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,68 +1,71 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+/* 
+@layer base {
+  @font-face {
+    font-family: 'OpenSans';
+    src: url('/fonts/OpenSans-VariableFont_wdth,wght.ttf') format('truetype');
   }
-  a:hover {
-    color: #747bff;
+
+  @font-face {
+    font-family: 'Oswald';
+    src: url('/fonts/Oswald-VariableFont_wght.ttf') format('truetype');
   }
-  button {
-    background-color: #f9f9f9;
+
+  body {
+    @apply font-OpenSans;
+  }
+
+  ::-webkit-scrollbar {
+    @apply w-2;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    @apply rounded-[4px] bg-black/20;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    @apply bg-black/30;
+  }
+
+  ::-webkit-scrollbar-thumb:active {
+    @apply bg-black/40;
+  }
+
+  select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    font-size: 0.875rem;
+    font-weight: 500;
+    font-variation-settings: 'wght' 500;
+    background: transparent;
+    background-image: url("data:image/svg+xml;utf8,<svg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M4 6L8 10L12 6' stroke='black' strokeWidth='2' strokeLinecap='round' strokeLinejoin='round'/></svg>");
+    background-repeat: no-repeat;
+    background-position-x: 96%;
+    background-position-y: 50%;
   }
 }
+
+@layer components {
+  .button {
+    @apply text-black md:px-6 md:py-2 px-1 py-1 transition-colors ease-in-out duration-300 hover:text-[#732F2F];
+  }
+
+  .button-colored {
+    @apply text-red-800 md:px-6 md:py-2 px-1 py-1 transition-all ease-in-out duration-300 border-b-2 border-transparent hover:border-red-800;
+  }
+
+  .button-filled {
+    @apply bg-[#5D1B2A] text-white hover:text-white py-0 px-3 md:px-6 md:py-2 transition-colors ease-in-out duration-300 hover:bg-[#703636];
+  }
+
+  .selectable {
+    @apply cursor-pointer p-2 rounded-xl hover:shadow hover:bg-black/5 transition-all ease-in-out duration-300;
+  }
+
+  .truncate {
+    @apply overflow-hidden text-ellipsis whitespace-nowrap;
+  }
+} */
