--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,6 +11,6 @@ body {
   
   /* Dark mode styles */
   body.dark-mode {
-    background-color: #121212; /* Dark background */
+    background-color: rgb(30, 41, 59); /* Dark background */
     /* color: white; Light text */
   }
